--- a/CoffyWebUI/CoffyWebUI.csproj
+++ b/CoffyWebUI/CoffyWebUI.csproj
@@ -26,4 +26,10 @@
     <ProjectReference Include="..\Coffy.EntityLayer\Coffy.EntityLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="QRCoder">
+      <HintPath>..\..\QRCoder.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
