--- a/Coffy.BusinessLayer/Coffy.BusinessLayer.csproj
+++ b/Coffy.BusinessLayer/Coffy.BusinessLayer.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Coffy.DataAccessLayer\Coffy.DataAccessLayer.csproj" />
+    <ProjectReference Include="..\Coffy.DtoLayer\Coffy.DtoLayer.csproj" />
   </ItemGroup>
 
 </Project>
